deploy: 8073b53beb221f2a59ae9d9ac20c7cbb47858899

--- a/redocusaurus/plugin-redoc-0.yaml
+++ b/redocusaurus/plugin-redoc-0.yaml
@@ -1724,7 +1724,7 @@ paths:
         **user (required)**  
         \- username (required) : string  
         \- password (required) : string  
-        \- passwordRepeat (required) : boolean  
+        \- passwordRepeat (required) : string  
         \- enabled (optional) : boolean  
         \- isAdmin (optional) : boolean  
         \- hasAccessToAllServers (optional): boolean  
@@ -1857,7 +1857,7 @@ paths:
 
         **user (required)**  
         \- password (optional) : string  
-        \- passwordRepeat (optional) : boolean  
+        \- passwordRepeat (optional) : string  
         \- enabled (optional) : boolean  
         \- isAdmin (optional) : boolean  
         \- hasAccessToAllServers (optional): boolean  
